<resources>
    <string name="app_name">PracticeApp01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="news_image">News Image</string>
    <string name="title">Title</string>
    <string name="published">Published:</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="view_more">View More</string>
    <string name="descriptiontext">Description</string>
    <string name="publishedtext">Published</string>
    <string name="datetext">Date</string>
    <string name="author">Author</string>
    <string name="contact_information">Contact Information:</string>
    <string name="email_example_com">email@example.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="scroll_to_bottom">Scroll to Bottom</string>
    <string name="sjamesmorton95_gmail_com">sjamesmorton95@gmail.com</string>
</resources>