<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardElevation="25dp"
    app:cardCornerRadius="5dp">

    <!--Main Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/news_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <!--Details-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/publishedtext"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/article_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/datetext"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/news_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="13dp"
                android:text="@string/descriptiontext" />

            <TextView
                android:id="@+id/news_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="13dp"
                android:text="@string/author" />

        </LinearLayout>
        <!--Details-->



    </LinearLayout>


    <!--Main Row-->
</androidx.cardview.widget.CardView>


